# yandexCheckerPython

./: .gitignore  GIT.md  README.md  SUMMARY.md  bot.py  captcha_log.json  main.py  phones_for_test.txt  pyproject.toml  run.bat  run_python.bat  stats.json  test_ocr_params.py
.claude/: settings.local.json
новый бот/: .env.example  CHANGES.md  ENV_SETUP.md  FILE_UPLOAD.md  README_SERVER.md  SERVER_API.md  SETUP.md  START_HERE.md  bot.py  bot_new.py  build.py  checker.py  example_client.py  examples.sh  install.bat  main.py  pyproject.toml  requirements_server.txt  server.py  test_file_upload.py
